<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.noid.toolbox.opdf</groupId>
  <artifactId>opdf-parent</artifactId>
  <version>1.0.0</version>

  <packaging>pom</packaging>
  <name>Open PDF Tool :: Parent</name>

  <properties>
    <encoding>utf-8</encoding>
    <java.version>8</java.version>
    <pdfbox.version>2.0.26</pdfbox.version>
    <picocli.version>4.6.3</picocli.version>
    <junit.version>5.9.0</junit.version>
  </properties>

  <modules>
    <module>opdf-api</module>
    <module>opdf-cli</module>
    <module>opdf-pdfbox</module>
    <module>opdf-assembly</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-cli</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.noid.toolbox.opdf</groupId>
        <artifactId>opdf-pdfbox</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox</artifactId>
        <version>${pdfbox.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
      </plugin>
    </plugins>
  </build>
</project>